# cmakePrijectTest

./: CMakeLists.txt  LICENSE  README.md  build.sh  enableWraning.cmake  main.cpp
buildclang/: CMakeCache.txt  Makefile  cmake_install.cmake
buildclang/log/: Makefile  cmake_install.cmake
buildlinux/: CMakeCache.txt  Makefile  cmake_install.cmake  test
buildlinux/.cmake/api/v1/reply/: cache-v2-dd6edb3e57515f6264e8.json  cmakeFiles-v1-0f4c1e245fb201ff784e.json  codemodel-v2-d396fff472d1b2c693c0.json  index-2026-05-31T04-02-13-0108.json  target-log-Release-25ee25c525684d538cc1.json  target-test-Release-84df1dd8a3a5a7403f99.json
buildlinux/alllog/: test.db
buildlinux/log/: Makefile  cmake_install.cmake
buildmingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
buildmingw/alllog/: test.db
buildmingw/log/: cmake_install.cmake
decode/: beastSound.c  binary.c  binary.h  finallyRecovery.h  generatesigal.h
fft/: fft.c
log/: CMakeLists.txt  cxxlog.cpp  cxxlog.h  lognone.c  lognone.h  memorypool.c  memorypool.h  printFunction.c  printFunction.h
log/printf/: myPrintf.c  myPrintf.h  vsnprintf.c
method/: bindkernel.c  endian.hpp
other/: main.c  myPrintf  myPrintf.c  myPrintf.h
sql/: baseSqlite3.c  baseSqlite3.h
